--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -7,3 +7,8 @@ mongodb {
   uri = "mongodb://${MONGO_USERNAME:root}:${MONGO_PASSWORD:password}@${MONGO_HOST:localhost}:${MONGO_PORT:27017}"
   database = "zeitung"
 }
+jackson {
+  serialization {
+    writeDatesAsTimestamps = false
+  }
+}
