--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,5 +1,8 @@
-name: GraalVM CE CI
-on: [push, pull_request]
+name: Docker Image
+on:
+  push:
+    branches:
+      - main
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -11,14 +14,13 @@ jobs:
             ~/.gradle/caches
             ~/.gradle/wrapper
             ~/.m2/repository
-          key: ${{ runner.os }}-gradle-test-${{ hashFiles('**/*.gradle') }}
-          restore-keys: ${{ runner.os }}-gradle-test-
-      - name: Setup GraalVM CE
-        uses: DeLaGuardo/setup-graalvm@3.1
+          key: ${{ runner.os }}-gradle-test-${{ hashFiles('**/*.gradle', '**/*.gradle.kts', '**/gradle.properties') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-test-
+      - name: Set up JDK 11
+        uses: actions/setup-java@v1
         with:
-          graalvm-version: 21.2.0.java11
-      - name: Install Native Image
-        run: gu install native-image
+          java-version: 11
       - name: Docker login
         uses: docker/login-action@v1
         with:
@@ -31,5 +33,5 @@ jobs:
           DOCKER_REGISTRY_URL: ${{ secrets.DOCKER_REGISTRY_URL }}
           TESTCONTAINERS_RYUK_DISABLED: true
         run: |
-          export DOCKER_IMAGE=`echo "${DOCKER_REGISTRY_URL}/${DOCKER_REPOSITORY_PATH}/zeitung" | sed -e 's#//#/#' -e 's#^/##'`
-          ./gradlew check dockerPushNative --no-daemon
+          export DOCKER_IMAGE=`echo "${DOCKER_REGISTRY_URL}/${DOCKER_REPOSITORY_PATH}/demo" | sed -e 's#//#/#' -e 's#^/##'`
+          ./gradlew check dockerPush --no-daemon
