--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -8,30 +8,20 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: actions/cache@v2
-        with:
-          path: |
-            ~/.gradle/caches
-            ~/.gradle/wrapper
-            ~/.m2/repository
-          key: ${{ runner.os }}-gradle-test-${{ hashFiles('**/*.gradle', '**/*.gradle.kts', '**/gradle.properties') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-test-
-      - name: Set up JDK 11
-        uses: actions/setup-java@v1
-        with:
-          java-version: 11
       - name: Docker login
         uses: docker/login-action@v1
         with:
           registry: ${{ secrets.DOCKER_REGISTRY_URL }}
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ github.token }}
-      - name: Build And Push Docker Image
+      - name: Build Docker Image
         env:
           DOCKER_REPOSITORY_PATH: ${{ secrets.DOCKER_REPOSITORY_PATH }}
           DOCKER_REGISTRY_URL: ${{ secrets.DOCKER_REGISTRY_URL }}
-          TESTCONTAINERS_RYUK_DISABLED: true
-        run: |
-          export DOCKER_IMAGE=`echo "${DOCKER_REGISTRY_URL}/${DOCKER_REPOSITORY_PATH}/zeitung" | sed -e 's#//#/#' -e 's#^/##'`
-          ./gradlew check dockerPush --no-daemon
+        run: docker build . -t $(echo ${DOCKER_REGISTRY_URL}/${DOCKER_REPOSITORY_PATH}/zeitung" | sed -e 's#//#/#' -e 's#^/##')
+
+      - name: Push Docker Image
+        env:
+          DOCKER_REPOSITORY_PATH: ${{ secrets.DOCKER_REPOSITORY_PATH }}
+          DOCKER_REGISTRY_URL: ${{ secrets.DOCKER_REGISTRY_URL }}
+        run: docker push $(echo ${DOCKER_REGISTRY_URL}/${DOCKER_REPOSITORY_PATH}/zeitung" | sed -e 's#//#/#' -e 's#^/##')
