--- a/src/main/resources/application.conf
+++ b/src/main/resources/application.conf
@@ -2,7 +2,23 @@ micronaut {
   application {
     name = zeitung
   }
+  security {
+    reject-not-found: false
+    authentication: bearer
+    token {
+      jwt {
+        signatures {
+          secret {
+            generator {
+              secret = "${JWT_GENERATOR_SIGNATURE_SECRET:pleaseChangeThisSecretForANewOne2}"
+            }
+          }
+        }
+      }
+    }
+  }
 }
+
 mongodb {
   uri = "mongodb://${MONGO_USERNAME:root}:${MONGO_PASSWORD:password}@${MONGO_HOST:localhost}:${MONGO_PORT:27017}"
   database = "zeitung"
@@ -11,4 +27,8 @@ jackson {
   serialization {
     writeDatesAsTimestamps = false
   }
+}
+
+zeitung {
+  salt = "${ZEITUNG_SALT_SECRET:pleaseChangeThisSecretForANewOne2}"
 }
